--- a/Translation/zh-Hans/Text/_Substitutions.txt
+++ b/Translation/zh-Hans/Text/_Substitutions.txt
@@ -57,3 +57,11 @@ Ishmael=以实玛利
 Heathcliff=希斯克利夫
 グレゴール=格里高尔
 Gregor=格里高尔
+CV.=CV.
+Mirror Worlds=镜像世界
+World of the J Corp. Backstreets=J公司后街的世界
+World of the Old G Corp.=旧G公司的世界
+World of the Old L Corp.=旧L公司的世界
+World of the LCCB=LCCB的世界
+World of R Corp.=R公司的世界
+World of W Corp.=W公司的世界
