--- a/Translation/zh-Hans/Text/_Substitutions.txt
+++ b/Translation/zh-Hans/Text/_Substitutions.txt
@@ -1,4 +1,4 @@
-﻿EX=EX
+EX=EX
 EXP=EXP
 編成#1=编队 #1
 編成#2=编队 #2
@@ -65,3 +65,30 @@ World of the Old L Corp.=旧L公司的世界
 World of the LCCB=LCCB的世界
 World of R Corp.=R公司的世界
 World of W Corp.=W公司的世界
+TEAMS=编队
+Team #20=编队 #20
+Team #19=编队 #19
+Team #18=编队 #18
+Team #17=编队 #17
+Team #16=编队 #16
+Team #15=编队 #15
+Team #14=编队 #14
+Team #13=编队 #13
+Team #12=编队 #12
+Team #11=编队 #11
+Team #10=编队 #10
+Team #9=编队 #9
+Team #8=编队 #8
+Team #7=编队 #7
+Team #6=编队 #6
+Team #5=编队 #5
+Team #4=编队 #4
+Team #3=编队 #3
+Team #2=编队 #2
+Team #1=编队 #1
+ステータス=状态
+Status=状态
+Resistances=抗性
+Normal=正常
+Fatal=致命
+Uptying=强化
