--- a/Translation/zh-Hans/Text/_Postprocessors.txt
+++ b/Translation/zh-Hans/Text/_Postprocessors.txt
@@ -1,1 +1,20 @@
-﻿
+﻿冲突=拼点
+盟友=队友
+卢红=鸿路
+龙州=良秀
+拳头=浮士德
+易桑=李箱
+奥蒂斯=奥提斯
+辛克莱=辛克莱
+罗季翁=罗佳
+格雷戈尔=格里高尔
+集团=公司
+身份=人格
+Corp=公司
+Wing=翼
+城市=都市
+层=等级
+林布斯公司=边狱公司
+Limbus=边狱
+’s Nest=的巢
+损伤=伤害
