--- a/Translation/zh-Hans/Text/_Preprocessors.txt
+++ b/Translation/zh-Hans/Text/_Preprocessors.txt
@@ -1,1 +1,27 @@
-﻿
+﻿Canto=章节
+Team=编队
+TEAMS=编队
+ホンル=鸿路
+Hong Lu=鸿路
+Meursault=默尔索
+Ryōshū=良秀
+Don Quixote=堂吉诃德
+Faust=浮士德
+Yi Sang=李箱
+Outis=奥提斯
+Sinclair=辛克莱
+Rodion=罗佳
+Ishmael=以实玛利
+Heathcliff=希斯克利夫
+グレゴール=格里高尔
+Gregor=格里高尔
+CV.=CV.
+District 10=第 10 区
+J Corp.=J 公司
+District 4=第 4 区
+D Corp.=D公司
+District 11=第 11 区
+K Corp.=K公司
+Abnormalities=异想体
+Charon=卡戎
+Lobotomy Corp=脑叶公司
