--- a/Translation/zh-Hans/Text/_Substitutions.txt
+++ b/Translation/zh-Hans/Text/_Substitutions.txt
@@ -1,5 +1,4 @@
-EX=EX
-EXP=EXP
+﻿EXP=EXP
 編成#1=编队 #1
 編成#2=编队 #2
 編成#3=编队 #3
@@ -43,21 +42,6 @@ ALEPH=ALEPH
 人格=人格
 OFF=OFF
 ON=ON
-ホンル=鸿路
-Hong Lu=鸿路
-Meursault=默尔索
-Ryōshū=良秀
-Don Quixote=堂吉诃德
-Faust=浮士德
-Yi Sang=李箱
-Outis=奥提斯
-Sinclair=辛克莱
-Rodion=罗佳
-Ishmael=以实玛利
-Heathcliff=希斯克利夫
-グレゴール=格里高尔
-Gregor=格里高尔
-CV.=CV.
 Mirror Worlds=镜像世界
 World of the J Corp. Backstreets=J公司后街的世界
 World of the Old G Corp.=旧G公司的世界
@@ -92,3 +76,31 @@ Resistances=抗性
 Normal=正常
 Fatal=致命
 Uptying=强化
+After dealing damage by using a Gluttony or Pierce damage skill, inflict 1 Defense Down on the target.\n\n=使用暴食或穿刺伤害技能造成伤害后，对目标造成1点防御下降。\n\n
+EX Cleared=EX通关
+EX Objectives=EX目标
+Difficulty=难度
+Clear within 10 turns=10回合内通关
+Story=故事
+Enemy Info=敌人信息
+Enter=进入
+EX=EX
+Passives=被动
+Skill=技能
+Head Hooligan=流氓头子
+Guard Up=守护
+Sinners=罪人
+All=全部
+Confirm=确认
+Unowned=未获得
+Owned=已获得
+Thread Exchange=碎片交换
+Thread Req.=升级所需碎片
+Uptie Tier=升级
+Current Tier=当前等级
+Identity Uptied=人格提升
+MAX=MAX
+SFX=SFX
+BGM=BGM
+Master=主音量
+STAGGER=趔趄
