--- a/Translation/zh-Hans/Text/_Postprocessors.txt
+++ b/Translation/zh-Hans/Text/_Postprocessors.txt
@@ -14,7 +14,20 @@ Corp=公司
 Wing=翼
 城市=都市
 层=等级
-林布斯公司=边狱公司
+林布斯=边狱
 Limbus=边狱
-’s Nest=的巢
+'s=的
+’s=的
 损伤=伤害
+美元=USD
+Nest=巢
+标识=人格
+通电=升级
+清楚=解锁
+交错=趔趄
+阶段=战斗
+※ Cannot use at {{A}}=※ 无法在{{A}}以上使用
+中联=剩余
+损害=伤害
+W公司清理代理=W公司清理人员
+刀锋世系萨尔苏=剑契
