--- a/Translation/zh-Hans/Text/_Substitutions.txt
+++ b/Translation/zh-Hans/Text/_Substitutions.txt
@@ -81,7 +81,6 @@ EX Cleared=EX通关
 EX Objectives=EX目标
 Difficulty=难度
 Clear within 10 turns=10回合内通关
-Story=故事
 Enemy Info=敌人信息
 Enter=进入
 EX=EX
@@ -104,3 +103,8 @@ SFX=SFX
 BGM=BGM
 Master=主音量
 STAGGER=趔趄
+FPS=FPS
+UID=UID
+Main Story=主要故事
+Dealt=输出
+Taken=受到伤害
