--- a/Translation/zh-Hans/Text/_Postprocessors.txt
+++ b/Translation/zh-Hans/Text/_Postprocessors.txt
@@ -34,3 +34,16 @@ W公司清理代理=W公司清理人员
 马力=HP
 中联=所有队友
 Company=公司
+罪人 #13=13号罪人
+罪人 #1=1号罪人
+罪人 #2=2号罪人
+罪人 #3=3号罪人
+罪人 #5=5号罪人
+罪人 #6=6号罪人
+罪人 #8=8号罪人
+罪人 #7=7号罪人
+罪人 #9=9号罪人
+罪人 #10=10号罪人
+罪人 #11=11号罪人
+罪人 #9=9号罪人
+罪人 #12=12号罪人
