--- a/Translation/zh-Hans/Text/_AutoGeneratedTranslations.txt
+++ b/Translation/zh-Hans/Text/_AutoGeneratedTranslations.txt
@@ -1,1 +1,19 @@
-﻿
+﻿MAX=MAX
+SFX=SFX
+BGM=BGM
+FPS=FPS
+UID=UID
+EX=EX
+OFF=OFF
+ON=ON
+TETH=TETH
+HE=HE
+WAW=WAW
+ALEPH=ALEPH
+NO.=NO.
+LV=LV
+Connecting=连接中
+STEAM=STEAM
+EXP=EXP
+EX Cleared=EX通关
+EX Objectives=EX目标
